--- a/SW/OpenOCD/c232hm.cfg
+++ b/SW/OpenOCD/c232hm.cfg
@@ -23,3 +23,6 @@ ftdi_layout_signal GPIOL0 -data 0x0010 -oe 0x0010
 ftdi_layout_signal GPIOL1 -data 0x0020 -oe 0x0020
 ftdi_layout_signal GPIOL2 -data 0x0040 -oe 0x0040
 ftdi_layout_signal GPIOL3 -data 0x0080 -oe 0x0080
+
+transport select jtag
+adapter_khz 1000
